# agents-observability-demo

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: test.yaml  type_checking.yaml
src/agents_observability/: main.py  utils.py
src/agents_observability_demo/: agent.py  main.py  models.py  server.py  utils.py  websocket.py
tests/: test_models.py  test_sql_engine.py
tools/: create_llama_cloud_index.py  create_llama_extract_agent.py
